try to fix video poster on mobile...

--- a/css/styles.css
+++ b/css/styles.css
@@ -312,10 +312,7 @@ header .header-content .inner p {
     min-width: 100%;
     min-height: 100%;
     height: auto;
-
-    background-color: #c9c9c9;
-    background-image: url('../assets/ciseaux.jpg');
-    background-position: center;
+    background: url("../assets/ciseaux.jpg") top left;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
